@@ -5815,3 +5815,12 @@ M       html/vbm12.html
 Yb was too early deleted for further surface use.
 ------------------------------------------------------------------------
 r641 | gaser | 2014-10-23 16:10:41
+
+M       CHANGES.txt
+M       cg_vbm_batch.m
+M       html/vbm12.html
+
+Adapted cg_vbm_batch.m to new parameters.
+
+------------------------------------------------------------------------
+r642 | gaser | 2014-10-24 10:14:07
